# FunctorFlow

./: .gitignore  DESIGN.md  NEXT_STEPS_TOMORROW.md  README.md  RELEASE_DRAFT.md  V1_ROADMAP.md  __init__.py  adapter_library.py  compiler.py  core.py  democritus.py  ket_block_duality.py  ket_lm.py  lm_compare.py  macros.py  notebook_renderer.py  predict_detach_demo.py  proof_interface.py  pyproject.toml  setup.py  structured_lm.py  sudoku_demo.py  tutorial_library.py
data/: README.md
examples/: __init__.py  compare_lm_models_demo.py  democritus_demo.py  ket_block_duality_demo.py  macro_library_demo.py  predict_detach_regime_demo.py  proof_certificate_demo.py  ptb_ket_lm_demo.py  sudoku_demo.py  tutorial_v0.py  wiki2_ket_lm_demo.py
notebooks/: foundations_tutorial.ipynb  ket_block_duality_demo.ipynb  ket_demo_functorflow.ipynb  mini_sudoku_demo.ipynb  planning_tutorial.ipynb  predict_detach_regime_demo.ipynb  ptb_ket_language_model.ipynb  ptb_model_comparison.ipynb  unified_tutorial.ipynb  wiki2_ket_language_model.ipynb  wiki2_model_comparison.ipynb
proofs/: FunctorFlowProofs.lean  lake-manifest.json  lakefile.lean
proofs/FunctorFlowProofs/: Compiler.lean  IR.lean
tests/: test_democritus.py  test_functorflow.py  test_ket_block_duality.py  test_ket_lm.py  test_lm_compare.py  test_macros.py  test_notebooks.py  test_predict_detach_demo.py  test_proof_interface.py  test_structured_lm.py  test_sudoku_demo.py  test_torch_lowering.py
